<resources>
    //startup
    <string name="app_name">PetWatch</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="textview">TextView</string>
    <string name="e_mail_address_here">E-mail address here</string>
    <string name="password">Password</string>
    <string name="username_or_password_is_incorrect">Username or Password is Incorrect</string>
    <string name="PetWatch">PetWatch</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!--    <string name="title_home">Home</string>-->
    <!--    <string name="title_dashboard">Dashboard</string>-->
    <!--    <string name="title_notifications">Notifications</string>-->

    //fragments
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="panic">Panic</string>

    <string name="map">Map</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>


    //Google Maps api
    <string name="PETWATCH_GOOGLE_MAPS_API_KEY">AIzaSyDQQ_MWzyJO8GUN7q9BvH1wOOCwk0lpdZU</string>
    <string name="Date">Date</string>
    <string name="speed">Speed</string>
    <string name="location_image">Location Image</string>
    <string name="kph">Kph</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_security"><![CDATA[Privacy & Security]]></string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="pets_name">Pets Name</string>
    <string name="passwords_do_not_match">Passwords Do Not Match</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_with_this_e_mail_address_is_already_taken">Account with this E-mail address is already taken</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="contact">Contact</string>
    <string name="contact_form_name">Name:</string>
    <string name="contact_form_email">Email:</string>
    <string name="contact_form_subject">Subject:</string>
    <string name="contact_form_message">Message:</string>
    <string name="submit">Submit</string>
    <string name="first_name_account">First Name:</string>
    <string name="name">Name:</string>
    <string name="pets_name_Account">Pets Name:</string>
    <string name="tracker_id">Tracker ID:</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_is_incorrect">Old Password is Incorrect</string>
    <string name="contactUs">CONTACT US</string>
    <string name="send_email">Send Email</string>
    <string name="new_tracker_i_d">New Tracker I.D.</string>
    <string name="go_back">Go Back</string>
    <string name="change_tracker_i_d">Change Tracker I.D.</string>

</resources>
