<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_panic"
        android:icon="@drawable/ic_panic_black_24dp"
        android:title="@string/panic" />

    <item
        android:id="@+id/navigation_speed"
        android:icon="@drawable/ic_speed_black_24dp"
        android:title="@string/speed" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map" />

    <item
        android:id="@+id/navigation_log"
        android:icon="@drawable/ic_log_black_24dp"
        android:title="@string/log" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />

</menu>
