<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_map">


    <fragment
        android:id="@+id/navigation_panic"
        android:name="ca326.petwatch.petwatch.ui.panic.PanicFragment"
        android:label="@string/panic"
        tools:layout="@layout/fragment_panic"
        app:itemTextColor="@color/colorWords"/>

    <fragment
        android:id="@+id/navigation_speed"
        android:name="ca326.petwatch.petwatch.ui.speed.SpeedFragment"
        android:label="@string/speed"
        tools:layout="@layout/fragment_speed"
        app:itemTextColor="@color/colorWords"/>

    <fragment
        android:id="@+id/navigation_map"
        android:name="ca326.petwatch.petwatch.ui.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map"
        app:itemTextColor="@color/colorWords"/>

    <fragment
        android:id="@+id/navigation_log"
        android:name="ca326.petwatch.petwatch.ui.log.LogFragment"
        android:label="@string/log"
        tools:layout="@layout/fragment_log"
        app:itemTextColor="@color/colorWords"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ca326.petwatch.petwatch.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"
        app:itemTextColor="@color/colorWords"/>

</navigation>