<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".SignUpScreen">

    <LinearLayout
        android:id="@+id/firstNameLayout"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/surnameLayout">


        <EditText

            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorWords"
            android:textColorHint="@color/colorWords"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/surnameLayout"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/emailAddresslayout">

        <EditText

            android:id="@+id/Surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:textColor="@color/colorWords"
            android:textColorHint="@color/colorWords"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailAddresslayout"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/petsNameLayout">



        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWords"
            android:textColorHint="@color/colorWords" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/petsNameLayout"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/petsName"
            android:width="300dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pets_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorWords"
            android:textColorHint="@color/colorWords" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordCreateLayout"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/petsNameLayout">

        <EditText
            android:id="@+id/passwordCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorWords"
            android:textColorHint="@color/colorWords"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmPasswordLayout"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordCreateLayout">


        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"

            android:textColor="@color/colorWords"
            android:textColorHint="@color/colorWords"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordNotMatchLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/petsNameLayout">


        <TextView
            android:id="@+id/passwordNotMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:textAlignment="center"
            android:text="@string/passwords_do_not_match"
            android:textColor="@color/colorWarning"
            android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/emailAddressTakenWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_with_this_e_mail_address_is_already_taken"
            android:textColor="@color/colorWarning"
            android:textStyle="bold"
            android:visibility="invisible"/>

    </LinearLayout>


    <LinearLayout
        android:id="@id/buttonSignUpLayout"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordLayout">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="140dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorWords"

            android:textSize="17sp"/>

    </LinearLayout>


</RelativeLayout>