<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/startUpScreenRelative"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"

    tools:context=".StartUpScreen">

    <LinearLayout
        android:id="@+id/signInBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_above="@id/signUpLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/signInLayout"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@id/signUpLayout">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="140dp"
            android:background="@color/colorButtonBackground"
            android:text="@string/sign_in"
            android:textColor="@color/colorWords"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signInStringLayout"
        android:padding="20dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/signInLayout">

        <TextView
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/colorWords"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/signInLayout"
        android:layout_margin="20dp"
        android:background="@drawable/gradient"
        android:layout_centerInParent="true"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorWords"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpButtonLayout"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/signUpLayout">


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonBackground"
            android:text="@string/sign_up"
            android:width="140dp"
            android:textColor="@color/colorWords"
            android:textSize="18sp"/>

    </LinearLayout>



</RelativeLayout>